<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search_button">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="menu_settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="search">Поиск</string>

    <string name="url">https://yandex.ru/legal/practicum_offer/"</string>
    <string name="shareMessage">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="email">anatoliy101100@yandex.ru</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="internet_error">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="nothing">Ничего не нашлось</string>
    <string name="You_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
</resources>