<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/padding_settings_main"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settingsBack_button"
            style="@style/SettingsButtons"
            android:layout_gravity="left"
            android:layout_weight="0"
            app:iconGravity="textStart"
            app:icon="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="left|center"
            android:layout_weight="3"
            android:text="@string/menu_settings"
            android:textSize="@dimen/text_size_settings"
            android:fontFamily="@font/ys_display_medium" />

        <Button
            style="@style/SettingsButtons"
            android:layout_gravity="right"
            android:layout_weight="0" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="23"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_top_list">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="11dp"
            android:paddingTop="10dp"
            android:paddingEnd="@dimen/padding_list"
            android:paddingStart="@dimen/padding_list">

            <TextView
                style="@style/SettingsTextView"
                android:text="@string/dark_theme" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/themeSwitcher"
                android:layout_gravity="end|center"
                android:layout_marginHorizontal="6dp"
                android:layout_width="56dp"
                android:layout_height="40dp"
                app:trackTint="#E6E8EB"
                app:thumbTint="#AEAFB4"/>


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_list">

            <TextView
                style="@style/SettingsTextView"
                android:text="@string/share_app" />

            <ImageView
                android:id="@+id/share"
                style="@style/SettingsImageView"
                app:srcCompat="@drawable/share_icon"/>



        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_list">

            <TextView
                style="@style/SettingsTextView"
                android:text="@string/write_to_support" />

            <ImageView
                android:id="@+id/support"
                style="@style/SettingsImageView"
                app:srcCompat="@drawable/support_icon"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_list">

            <TextView
                style="@style/SettingsTextView"
                android:text="@string/terms_of_use" />

            <ImageView
                android:id="@+id/forward"
                style="@style/SettingsImageView"
                app:srcCompat="@drawable/forward_icon" />

        </FrameLayout>



    </LinearLayout>

</LinearLayout>