<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:layout_gravity="start"
            android:textSize="@dimen/playlist_size"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/playlist_padding_left"
            android:paddingTop="@dimen/playlist_padding_top"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="12"
        android:orientation="vertical">


        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_left"
            android:layout_marginRight="@dimen/layout_margin_right"
            android:layout_marginBottom="@dimen/layout_margin_bottom"
            android:layout_weight="1"
            android:text="@string/search_button"
            app:cornerRadius="@dimen/button_radius"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:icon="@drawable/search_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/button_icon_padding"
            app:iconTint="@color/black"/>

        <Button
            android:id="@+id/mediaLibrary_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/media_library"
            android:layout_marginBottom="@dimen/layout_margin_bottom"
            android:layout_marginLeft="@dimen/layout_margin_left"
            android:layout_marginRight="@dimen/layout_margin_right"
            app:cornerRadius="@dimen/button_radius"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:icon="@drawable/library_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/button_icon_padding"
            app:iconTint="@color/black"/>
        <Button
            android:id="@+id/setting_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings"
            android:layout_marginBottom="@dimen/layout_margin_bottom"
            android:layout_marginLeft="@dimen/layout_margin_left"
            android:layout_marginRight="@dimen/layout_margin_right"
            app:cornerRadius="@dimen/button_radius"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:icon="@drawable/setting_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/button_icon_padding"
            app:iconTint="@color/black"/>

    </LinearLayout>



</LinearLayout>